# xmtlib

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  ast.rs  datamodel.md  doc.md  error.rs  grammar.rs  lib.rs  main.rs  solver.rs
src/backend/: mod.rs
src/private/: a_sort.rs  b_fun.rs  c_assert.rs  c_ground.rs  c_term.rs  d_ground.rs  d_interpret.rs  e1_ground_query.rs  e1_ground_view.rs  e2_ground_query.rs  e2_ground_sql.rs  e3_ground_sql.rs  e_ground.rs  e_interpret.rs  mod.rs  sort.rs  x_query.rs  x_view.rs  y_db.rs  z_option_map.rs  z_utilities.rs
src/private/e_ground2/: e1_ground.rs  e2_generator.rs  e3_query.rs  mod.rs
tests/: _integration_test.rs  _test.rs  empty.smt2  empty.xmt  prime.xmt  sandbox.smt2  sandbox.xmt  sorts.smt2  triangle Int.smt2  triangle Int.xmt  triangle.rs  triangle.smt2  triangle.xmt
tests/benchmark/: HamiltonianPath.xmt  N-queens.xmt  NonPartitionRemovalColoring.xmt  PPM.xmt  PackingProblem.xmt  QuasiGroup.xmt  RamseyNumbers.xmt  Reachability.xmt  adhesive_100.xmt  common_items.xmt  complete_sets.xmt  graceful_graph.xmt  graph_coloring.xmt  stable_marriage.xmt2  stablemarriage.xmt  triangle Int.xmt  triangle.xmt
tests/private/: a_sorts_1.smt2  a_sorts_1.xmt  a_sorts_2.smt2  a_sorts_2.xmt  b_fun.smt2  b_fun.xmt  c_term.smt2  c_term_const.smt2  c_term_const.xmt  c_term_quant.smt2  c_term_quant.xmt  d_interpret_1.smt2  d_interpret_1.xmt  d_interpret_fun_2.smt2  d_interpret_fun_2.xmt  d_interpret_partial.smt2  d_interpret_partial.xmt  e_ground.smt2  e_ground.xmt  e_ground_alternation.xmt  e_ground_arithmetic.smt2  e_ground_arithmetic.xmt  e_ground_boolean_eq.xmt  e_ground_boolean_eq_2.xmt  e_ground_comparison.smt2  e_ground_comparison.xmt  e_ground_compound.smt2  e_ground_compound.xmt  e_ground_compound_1.xmt  e_ground_compound_2.xmt  e_ground_constructors.xmt  e_ground_constructors_2.xmt  e_ground_equality.smt2  e_ground_equality.xmt  e_ground_nested_q.xmt  e_ground_predef.xmt  e_ground_repeat.xmt  e_ground_stable_marriage.xmt  e_ground_transitive.xmt  e_interpret_1.smt2  (+2 more)
