[package]
name = "xmtlib"
version = "0.1.0"
authors = ["Pierre Carbonnelle"]
edition = "2021"
rust-version = "1.84.1"
description = "A high-level language for interacting with SMT solvers"
documentation = "https://docs.rs/xmtlib"
readme = "README.md"
repository = "https://github.com/pcarbonn/xmtlib"
license = "MIT"
keywords = ["solver", "smt", "satisfiability"]
categories = ["mathematics", "science"]

[dependencies]
chic = "1.2.2"
clap = { version = "4.5.34", features = ["derive"] }
debug_print = "1.0.0"
genawaiter = "0.99.1"
indexmap = "2.8.0"
itertools = "0.14.0"
peg = "0.8.5"
pretty-sqlite = "0.0.3"
regex = "1.11.1"
rusqlite = { version = "0.33.0", features = ["bundled", "functions"] }
simplelog = "0.12.2"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
unzip-n = "0.1.2"
z3-sys = "0.8.1"
