[package]
name = "xmt-lib"
version = "0.1.0"
authors = ["Pierre Carbonnelle"]
edition = "2021"
rust-version = "1.86.0"
description = "A high-level language for interacting with SMT solvers"
documentation = "https://docs.rs/xmt-lib"
readme = "README.md"
repository = "https://github.com/pcarbonn/xmtlib"
license = "MIT"
keywords = ["solver", "smt", "satisfiability"]
categories = ["mathematics", "science"]

[dependencies]
chic = "1.2.2"
clap = { version = "4.5.34", features = ["derive"] }
debug_print = "1.0.0"
derive_more = "2.0.1"
genawaiter = "0.99.1"
indexmap = "2.9.0"
itertools = "0.14.0"
peg = "0.8.5"
pretty-sqlite = "0.1.0"
regex = "1.11.1"
rusqlite = { version = "0.35.0", features = ["bundled", "functions"] }
simplelog = "0.12.2"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
unzip-n = "0.1.2"
z3-sys = { version = "0.8.1" }

[features]
static-link-z3 = ["z3-sys/static-link-z3"]
